force-app/main/default/objects/Product2/fields/CCR_Category__c.field-meta.xml
<CustomField>
    <fullName>CCR_Category__c</fullName>
    <description>product category</description>
    <label>Product Category</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>