force-app/main/default/objects/Product2/fields/CCR_Differentiator__c.field-meta.xml
<CustomField>
    <fullName>CCR_Differentiator__c</fullName>
    <description>Brand Differentiator</description>
    <label>Brand Differentiator</label>
    <length>10</length>
    <type>Text</type>
</CustomField>