force-app/main/default/objects/Product2/fields/CCR_OriginalDesignMarket__c.field-meta.xml
<CustomField>
    <fullName>CCR_OriginalDesignMarket__c</fullName>
    <description>Market where the box will be commercialized</description>
    <label>Original Design Market</label>
    <length>4</length>
    <required>true</required>
    <type>Text</type>
</CustomField>