force-app/main/default/objects/Product2/fields/CCR_ProductName__c.field-meta.xml
<CustomField>
    <fullName>CCR_ProductName__c</fullName>
    <description>To make the standar field unique</description>
    <externalId>true</externalId>
    <label>Product Name</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>