force-app/main/default/objects/Product2/fields/CCR_SubMarket__c.field-meta.xml
<CustomField>
    <fullName>CCR_SubMarket__c</fullName>
    <description>Submarket (e.g. dufry, testmarket, free zone,…)</description>
    <label>Sub Market</label>
    <length>3</length>
    <type>Text</type>
</CustomField>