force-app/main/default/objects/Product2/fields/CCR_Version__c.field-meta.xml
<CustomField>
    <fullName>CCR_Version__c</fullName>
    <description>Device Version</description>
    <label>Version</label>
    <length>200</length>
    <type>Text</type>
</CustomField>