force-app/main/default/objects/Product2/fields/KDCE_EANCode__c.field-meta.xml
<CustomField>
    <fullName>KDCE_EANCode__c</fullName>
    <description>Bar CODE (88 Code) EAN Code</description>
    <externalId>true</externalId>
    <inlineHelpText>88 Code</inlineHelpText>
    <label>EAN Code</label>
    <length>40</length>
    <type>Text</type>
</CustomField>