force-app/main/default/objects/Product2/fields/KDCE_MG_Category__c.field-meta.xml
<CustomField>
    <fullName>KDCE_MG_Category__c</fullName>
    <description>[KDCE] MG_Category</description>
    <label>MG_Category</label>
    <length>255</length>
    <type>Text</type>
</CustomField>