force-app/main/default/objects/Product2/fields/KDCE_MG_Color__c.field-meta.xml
<CustomField>
    <fullName>KDCE_MG_Color__c</fullName>
    <description>[KDCE] [Ecommerce] Color</description>
    <label>MG_Color</label>
    <length>255</length>
    <type>Text</type>
</CustomField>