force-app/main/default/objects/Product2/fields/KDCE_MG_Content__c.field-meta.xml
<CustomField>
    <fullName>KDCE_MG_Content__c</fullName>
    <description>[KDCE] MG_Content</description>
    <label>MG_Content</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>