force-app/main/default/objects/Product2/fields/KDCE_MG_Description__c.field-meta.xml
<CustomField>
    <fullName>KDCE_MG_Description__c</fullName>
    <description>[KDCE] MG_Description</description>
    <label>MG_Description</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>