force-app/main/default/objects/Product2/fields/KDCE_MG_Id__c.field-meta.xml
<CustomField>
    <fullName>KDCE_MG_Id__c</fullName>
    <description>[KDCE] Magento Product Id</description>
    <label>Magento Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>