force-app/main/default/objects/Product2/fields/KDCE_MG_Image__c.field-meta.xml
<CustomField>
    <fullName>KDCE_MG_Image__c</fullName>
    <description>[KDCE] [Ecommerce] Image</description>
    <label>MG_Image</label>
    <length>255</length>
    <type>Text</type>
</CustomField>