force-app/main/default/objects/Product2/fields/KDCE_MG_ManufactureCountry__c.field-meta.xml
<CustomField>
    <fullName>KDCE_MG_ManufactureCountry__c</fullName>
    <description>[KDCE] [Ecommerce] Country of Manufacture</description>
    <label>MG_Manufacture Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>