force-app/main/default/objects/Product2/fields/KDCE_MG_MasterProductId__c.field-meta.xml
<CustomField>
    <fullName>KDCE_MG_MasterProductId__c</fullName>
    <description>[KDCE] MG_MasterProductId</description>
    <label>MG_Master Product Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>