force-app/main/default/objects/Product2/fields/KDCE_MG_Material__c.field-meta.xml
<CustomField>
    <fullName>KDCE_MG_Material__c</fullName>
    <description>[KDCE] [Ecommerce] Material</description>
    <label>MG_Material</label>
    <length>255</length>
    <type>Text</type>
</CustomField>