force-app/main/default/objects/Product2/fields/KDCE_MG_ModelGroup__c.field-meta.xml
<CustomField>
    <fullName>KDCE_MG_ModelGroup__c</fullName>
    <description>[KDCE] MG_ModelGroup</description>
    <label>MG_ModelGroup</label>
    <length>255</length>
    <type>Text</type>
</CustomField>