force-app/main/default/objects/Product2/fields/KDCE_MG_ModelName_en__c.field-meta.xml
<CustomField>
    <fullName>KDCE_MG_ModelName_en__c</fullName>
    <description>[KDCE] MG_ModelName_en</description>
    <label>MG_ModelName_en</label>
    <length>255</length>
    <type>Text</type>
</CustomField>