force-app/main/default/objects/Product2/fields/KDCE_MG_Price__c.field-meta.xml
<CustomField>
    <fullName>KDCE_MG_Price__c</fullName>
    <description>[KDCE] [Ecommerce] 권장소비자가격</description>
    <label>MG_Price</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>