force-app/main/default/objects/Product2/fields/KDCE_MG_ProductDescription__c.field-meta.xml
<CustomField>
    <fullName>KDCE_MG_ProductDescription__c</fullName>
    <description>[KDCE] [Ecommerce] 상품 국문명(온라인판매 상품명)</description>
    <label>MG_Product Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>