force-app/main/default/objects/Product2/fields/KDCE_MG_ProductName_ko__c.field-meta.xml
<CustomField>
    <fullName>KDCE_MG_ProductName_ko__c</fullName>
    <description>[KDCE]MG_ProductName_ko</description>
    <label>MG_ProductName_ko</label>
    <length>255</length>
    <type>Text</type>
</CustomField>