force-app/main/default/objects/Product2/fields/KDCE_MG_SendTarget__c.field-meta.xml
<CustomField>
    <fullName>KDCE_MG_SendTarget__c</fullName>
    <defaultValue>false</defaultValue>
    <description>[KDCE] MG로 전송 되어야 하는 제품</description>
    <label>MG Send Target</label>
    <type>Checkbox</type>
</CustomField>