force-app/main/default/objects/Product2/fields/KDCE_MG_SKU__c.field-meta.xml
<CustomField>
    <fullName>KDCE_MG_SKU__c</fullName>
    <description>[KDCE] [Ecommerce] sku</description>
    <label>MG_SKU</label>
    <length>255</length>
    <type>Text</type>
</CustomField>