force-app/main/default/objects/Product2/fields/KDCE_MG_TaxClass__c.field-meta.xml
<CustomField>
    <fullName>KDCE_MG_TaxClass__c</fullName>
    <description>[KDCE] [Ecommerce] 세금구분</description>
    <label>MG_Tax Class</label>
    <length>255</length>
    <type>Text</type>
</CustomField>