force-app/main/default/objects/Product2/fields/KDCE_MG_Type__c.field-meta.xml
<CustomField>
    <fullName>KDCE_MG_Type__c</fullName>
    <description>[KDCE] MG_Type</description>
    <label>MG_Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>