force-app/main/default/objects/Product2/fields/KDCE_MG_Unit__c.field-meta.xml
<CustomField>
    <fullName>KDCE_MG_Unit__c</fullName>
    <description>[KDCE] MG_Unit</description>
    <label>MG_Unit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>EA</fullName>
            </value>
            <value>
                <fullName>PACK</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>