force-app/main/default/objects/Product2/fields/KDCE_MG_Version__c.field-meta.xml
<CustomField>
    <fullName>KDCE_MG_Version__c</fullName>
    <description>[KDCE]MG_Version</description>
    <label>MG_Version</label>
    <length>255</length>
    <type>Text</type>
</CustomField>