force-app/main/default/objects/Product2/fields/KDCE_MG_VideoDescription__c.field-meta.xml
<CustomField>
    <fullName>KDCE_MG_VideoDescription__c</fullName>
    <description>[KDCE] [Ecommerce] Video_Description</description>
    <label>MG_Video Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>