force-app/main/default/objects/Product2/fields/KDCE_MG_VideoPreviewImage__c.field-meta.xml
<CustomField>
    <fullName>KDCE_MG_VideoPreviewImage__c</fullName>
    <description>[KDCE] [Ecommerce] Videos_Preview_Image</description>
    <label>MG_Video Preview Image</label>
    <length>255</length>
    <type>Text</type>
</CustomField>