force-app/main/default/objects/Product2/fields/KDCE_MG_VideoTitle__c.field-meta.xml
<CustomField>
    <fullName>KDCE_MG_VideoTitle__c</fullName>
    <description>[KDCE] [Ecommerce] Video_Title</description>
    <label>MG_Video Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>