force-app/main/default/objects/Product2/fields/KDCE_MG_VideoURL__c.field-meta.xml
<CustomField>
    <fullName>KDCE_MG_VideoURL__c</fullName>
    <description>[KDCE] [Ecommerce] Videos_url</description>
    <label>MG_Video URL</label>
    <type>Url</type>
</CustomField>