force-app/main/default/objects/Product2/fields/KDCE_MG_Visibility__c.field-meta.xml
<CustomField>
    <fullName>KDCE_MG_Visibility__c</fullName>
    <description>[KDCE] [Ecommerce] Visibility</description>
    <label>MG_Visibility</label>
    <length>255</length>
    <type>Text</type>
</CustomField>