force-app/main/default/objects/Product2/fields/KDCE_MG_Weight__c.field-meta.xml
<CustomField>
    <fullName>KDCE_MG_Weight__c</fullName>
    <description>[KDCE] [Ecommerce] Weight</description>
    <label>MG_Weight</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>