force-app/main/default/objects/Product2/fields/KDCE_ProductCategoryDescription__c.field-meta.xml
<CustomField>
    <fullName>KDCE_ProductCategoryDescription__c</fullName>
    <description>커머스 사용자가 수정가능한 Product Category 필드. 초기에 들어올땐 기존에 있던 Product Category값과 같은 값으로 매핑되어서 들어옴.</description>
    <label>Product Category Description</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>M0101</fullName>
                <label>(M0101) RRP HTP Sticks</label>
            </value>
            <value>
                <fullName>M0301</fullName>
                <label>(M0301) Reduced Risk Products HTP Holder</label>
            </value>
            <value>
                <fullName>M0302</fullName>
                <label>(M0302) Reduced Risk Products HTP Pocket Charger</label>
            </value>
            <value>
                <fullName>M0303</fullName>
                <label>(M0303) Accessory Organize</label>
            </value>
            <value>
                <fullName>M0304</fullName>
                <label>(M0304) Accessory Customize</label>
            </value>
            <value>
                <fullName>M0306</fullName>
                <label>(M0306) Reduced Risk Products HTP USB Power Adapter</label>
            </value>
            <value>
                <fullName>M0307</fullName>
                <label>(M0307) Reduced Risk Products HTP Car Charger</label>
            </value>
            <value>
                <fullName>M0308</fullName>
                <label>(M0308) Reduced Risk Products HTP USB Cable</label>
            </value>
            <value>
                <fullName>M0309</fullName>
                <label>(M0309) Accessory Charge</label>
            </value>
            <value>
                <fullName>M0320</fullName>
                <label>(M0320) RRP HTP Cleaning Tool</label>
            </value>
            <value>
                <fullName>M0321</fullName>
                <label>(M0321) RRP HTP Cleaning Sticks</label>
            </value>
            <value>
                <fullName>M0322</fullName>
                <label>(M0322) Accessory Dispose</label>
            </value>
            <value>
                <fullName>M0323</fullName>
                <label>(M0323) RRP HTP Sleeve</label>
            </value>
            <value>
                <fullName>M0390</fullName>
                <label>(M0390) RRP HTP Other Accessory</label>
            </value>
            <value>
                <fullName>M0401</fullName>
                <label>(M0401) RRP HTP Kit with holder</label>
            </value>
            <value>
                <fullName>M0405</fullName>
                <label>(M0405) NCP Closed System Sys Kit</label>
            </value>
            <value>
                <fullName>M0412</fullName>
                <label>(M0412) RRP HTP Combo Box</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>