force-app/main/default/objects/Product2/fields/KDEC_POS_ProductCategory__c.field-meta.xml
<CustomField>
    <fullName>KDEC_POS_ProductCategory__c</fullName>
    <description>[KDCE]Offline Product Category</description>
    <inlineHelpText>Offline(POS) Product Category</inlineHelpText>
    <label>Offline Product Category</label>
    <length>20</length>
    <type>Text</type>
</CustomField>