force-app/main/default/objects/Product2/fields/KDEC_POS_ProductDescription__c.field-meta.xml
<CustomField>
    <fullName>KDEC_POS_ProductDescription__c</fullName>
    <description>[KDCE] Offline Product Description</description>
    <inlineHelpText>Offline(POS) Product Description</inlineHelpText>
    <label>Offline Product Description</label>
    <length>400</length>
    <type>LongTextArea</type>
</CustomField>