force-app/main/default/objects/Product2/fields/KDEC_POS_ProductName__c.field-meta.xml
<CustomField>
    <fullName>KDEC_POS_ProductName__c</fullName>
    <description>[KDCE] Offline Product Name</description>
    <inlineHelpText>Offline Product Name</inlineHelpText>
    <label>Offline Product Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>