force-app/main/default/objects/Product2/listViews/MagentoSend.listView-meta.xml
<ListView>
    <fullName>MagentoSend</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.DESCRIPTION</columns>
    <columns>CCR_OriginalDesignMarket__c</columns>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <columns>KDCE_EANCode__c</columns>
    <columns>CCR_Category__c</columns>
    <columns>CCR_Version__c</columns>
    <columns>PRODUCT2.FAMILY</columns>
    <columns>CCR_Differentiator__c</columns>
    <columns>CCR_SubMarket__c</columns>
    <columns>PRODUCT2.LAST_UPDATE</columns>
    <columns>PRODUCT2.CREATED_DATE</columns>
    <columns>KDEC_POS_ProductName__c</columns>
    <columns>CCR_ProductName__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>KDCE_MG_SendTarget__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Magento Send</label>
</ListView>